tests/samples/block-if-unclosed/template.blate
// error: if never closed
{@if flag}yes
